# tracer

./: .gitignore  Cargo.toml  README.md  car.json  scene.json
examples/: README.md
examples/car/: scene.json
examples/materials/: scene.json
src/: aabb.rs  bsp.rs  bvh.rs  bxdf.rs  camera.rs  colour.rs  fresnel.rs  hittable.rs  instance.rs  json.rs  kdtree.rs  kdtree_bounds.rs  lib.rs  main.rs  material.rs  microfacet.rs  object.rs  onb.rs  pdf.rs  ray.rs  rectangle.rs  scene.rs  shader.wgsl  sphere.rs  texture.rs  utils.rs  vector.rs  volume.rs  window.rs
