[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
obj-rs = "0.7.0"
rayon = "1.5"
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
clap = { version = "4.0.29", features = ["derive"] }
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.14"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
